--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ExampleMachineLearning\ExampleMachineLearning.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\HeartyBase\HeartyBase.csproj" />
   </ItemGroup>
 
 </Project>
