--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SampleClassification\SampleClassification.csproj" />
+    <ProjectReference Include="..\ExampleMachineLearning\ExampleMachineLearning.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
