--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\ExampleMachineLearning\ExampleMachineLearning.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\HeartyBase\HeartyBase.csproj" />
+	<ProjectReference Include="..\FromHeartyAI\FromHeartyAI.csproj" />
   </ItemGroup>
 
 </Project>
