--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "github-pages": "ng build --configuration production --base-href \"https://muhamedkarajic.github.io/from-hearty/\""
   },
   "private": true,
   "dependencies": {
