--- a/FromHeartyAI/FromHeartyAI.csproj
+++ b/FromHeartyAI/FromHeartyAI.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <None Update="Data\FromHeartyTrainingDS.csv">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
