--- a/FromHeartyAI/FromHeartyAI.csproj
+++ b/FromHeartyAI/FromHeartyAI.csproj
@@ -7,14 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="3.0.0" />
-    <PackageReference Include="Microsoft.ML.FastTree" Version="3.0.0" />
+    <None Remove="DataSets\FromHeartyTrainingDS.csv" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Data\FromHeartyTrainingDS.csv">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </None>
+    <Content Include="DataSets\FromHeartyTrainingDS.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ML" Version="3.0.0" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
