--- a/FromHeartyAI/FromHeartyAI.csproj
+++ b/FromHeartyAI/FromHeartyAI.csproj
@@ -19,6 +19,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     <PackageReference Include="Microsoft.ML" Version="3.0.0" />
     <PackageReference Include="Microsoft.ML.FastTree" Version="3.0.0" />
   </ItemGroup>
