#205 - Local script build command is available
npm i
npm run serve-build

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "serve-build": "npx http-server dist/from-hearty/browser",
     "github-pages": "ng build --configuration production --base-href \"https://muhamedkarajic.github.io/from-hearty/\""
   },
   "private": true,
@@ -31,6 +32,7 @@
     "@angular/cli": "^17.0.10",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "http-server": "^14.1.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
