--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -39,7 +39,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/assets/style.css",
-              "src/assets/style.min.css"
+              "src/assets/style.min.css",
+              "node_modules/ag-grid-community/styles/ag-grid.css",
+              "node_modules/ag-grid-community/styles/ag-theme-quartz.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
