--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/list": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
+    "ag-grid-angular": "^31.0.3",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "ngx-toastr": "^18.0.0",
