--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.0",
+    "@angular/cdk": "^17.0.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
@@ -29,6 +30,7 @@
     "ag-grid-angular": "^31.0.3",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "mdb-angular-ui-kit": "^6.0.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
