--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,8 @@
     "@fullcalendar/interaction": "^6.1.10",
     "@fullcalendar/list": "^6.1.10",
     "@fullcalendar/timegrid": "^6.1.10",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@popperjs/core": "^2.11.8",
     "ag-grid-angular": "^31.0.3",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
@@ -40,6 +42,7 @@
     "@angular-devkit/build-angular": "^17.0.10",
     "@angular/cli": "^17.0.10",
     "@angular/compiler-cli": "^17.0.0",
+    "@angular/localize": "^17.0.0",
     "@types/jasmine": "~5.1.0",
     "http-server": "^14.1.1",
     "jasmine-core": "~5.1.0",
