--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,6 +31,7 @@
     "@popperjs/core": "^2.11.8",
     "ag-grid-angular": "^31.0.3",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "jquery": "^3.7.1",
     "mdb-angular-ui-kit": "^6.0.0",
     "ngx-toastr": "^18.0.0",
